--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "Hemant Dimri",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^2.5.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mongoose": "^8.6.3"
+    "mongoose": "^8.6.3",
+    "multer": "^1.4.5-lts.1"
   }
 }
